styles(aside.menu__lista): fixed and items aligned

--- a/css/flexbox.css
+++ b/css/flexbox.css
@@ -11,6 +11,29 @@
   display: none;
 }
 
+/* Menú */
+.menu__container {
+  position: fixed;
+  bottom: 0%;
+  height: 75px;
+  width: 100%;
+}
+
+.menu__lista{
+  display: flex;
+  justify-content: space-around;
+  height: 100%;
+}
+
+.menu__lista li {
+  align-self: center;
+}
+
+.menu__lista:nth-child(2),
+.menu__lista:nth-child(3),
+.menu__lista:nth-child(4) {
+  display: None;
+}
 
 /* seccion superior */
 .superior__seccion__container {
@@ -20,6 +43,7 @@
   overflow: scroll;
   gap: 15px;
 }
+
 
  /* pie de pagina */
 .rodapie__container {
